mdmCeneveo/src/objects/Modification__c.object
<CustomObject>
    <description>This is used in our internal system change control process. (Relates to System Issue Report object.)</description>
    <fields>
        <fullName>Apex_Script__c</fullName>
        <inlineHelpText>Anonymous Apex scripts go here--use comments for special instructions, please</inlineHelpText>
        <label>Apex Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field when a Modification is completed.  This is helpful when there are a number of manual edits to be made.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Label__c</fullName>
        <label>Component Label</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <inlineHelpText>API Name</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>Analytic Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anonymous Apex Script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auth. Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Response Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLI Script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder Item: Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder Item: Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder Item: Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder Item: Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Web Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intranet Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object: Action Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object: Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object: Business Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object: Buttons/Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object: Entire Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object: Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object: Field Set</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This field may be left empty unless instructions are necessary for deployment of this modification.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Since_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for quickly identifying Modifications that were added after the rest of them were deployed.</inlineHelpText>
        <label>New Since Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppExchange Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Deployment_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post-Deployment Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Deployment_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this field to flag items that must be done prior to migrating anything, such as setting up queues, creating record types, page layouts, report/dashboard folders, etc.</inlineHelpText>
        <label>Pre-Deployment Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIR_Status__c</fullName>
        <formula>TEXT(System_Issue_Report__r.Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>This optional field only needs to be filled in if there is a required sequence for Deployment of modifications.  Otherwise it can be left empty.</inlineHelpText>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Issue_Report__c</fullName>
        <label>Task</label>
        <referenceTo>Issues_New_Feature_Request__c</referenceTo>
        <relationshipLabel>Modifications</relationshipLabel>
        <relationshipName>Modifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_Of_Modification__c</fullName>
        <label>Type Of Modification</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Modification</label>
    <nameField>
        <displayFormat>MN-{0000000}</displayFormat>
        <label>Modification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>